Fix badge for dark mode (#223)

--- a/packages/web/src/assets/styles/colors.css
+++ b/packages/web/src/assets/styles/colors.css
@@ -90,7 +90,7 @@
 
   --mask: rgba(243, 240, 247, .5);
   --skeleton-gradient: linear-gradient(90deg, #F7F7F9 25%, #F2F2F4 37%, #F7F7F9 63%);
-  --skeleton: #F7F7F9; 
+  --skeleton: #F7F7F9;
   --profile-completion-shadow-1: rgba(126,27,204,0.05);
   --profile-completion-shadow-2: rgba(133,129,153,0.2);
 
@@ -116,6 +116,9 @@
   --page-header-gradient-1: rgb(252,252,252);
   --page-header-gradient-2: rgba(252,252,252,0.85);
   --page-header-gradient-2-alt: rgba(252,252,252,0.95);
+
+  --profile-page-badge: #FFFFFF;
+  --profile-page-badge-shadow: 0px 2px 5px -2px rgba(133, 129, 153, 0.25), 0px 1px 0px -2px rgba(227, 227, 227, 1), 0px 0px 1px -2px rgba(133, 129, 153, 0.1);
 }
 
 /**
